Remad list method"